# seam

./: .gitattributes  .gitignore  .golangci.yml  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  ECOSYSTEM.md  Justfile  LICENSE  README.md  chore.toml  clippy.toml  dprint.json  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/seam-cli/: Cargo.toml
crates/seam-cli/src/: main.rs  manifest.rs  pull.rs
crates/seam-macros/src/: lib.rs  seam_procedure.rs  seam_type.rs
crates/seam-server/: Cargo.toml
crates/seam-server/src/: errors.rs  injector.rs  lib.rs  manifest.rs  page.rs  procedure.rs  server.rs
demo/backend/node/: package.json
demo/backend/rust/: Cargo.toml
demo/backend/typescript/: package.json
demo/frontend/: package.json
demo/frontend-react/: package.json  vite.config.ts
demo/frontend-react/src/: main.tsx  routes.ts
demo/frontend/src/: index.ts
demo/templates/: user.html
docs/: channel-protocol.md  development.md  logic-layer.md  procedure-manifest.md  roadmap.md  sentinel-protocol.md  skeleton-constraints.md  slot-protocol.md  subscription-protocol.md  transport-layer.md  ui-layer.md
docs/architecture/: logic-layer.md  transport-layer.md  ui-layer.md
docs/protocol/: channel-protocol.md  error-codes.md  jtd-schema.md  procedure-manifest.md  sentinel-protocol.md  skeleton-constraints.md  slot-protocol.md  subscription-protocol.md
examples/client-react/: seam.config.json  seam.toml  vite.config.ts
examples/client-react/src/: main.tsx  routes.ts
examples/client-vanilla/: package.json
examples/client-vanilla/src/: index.ts
examples/features/channel-subscription/: package.json  seam.config.ts
examples/features/context-auth/: package.json  seam.config.ts
examples/features/handoff-narrowing/: package.json  seam.config.ts  tsconfig.json
examples/features/query-mutation/: package.json  seam.config.ts
examples/features/stream-upload/: package.json  seam.config.ts  seam.toml
examples/fs-router-demo/: .gitignore  README.md  package.json  seam.config.ts  seam.toml  tsconfig.json
examples/fullstack/react-hono-tanstack/: CLAUDE.md  README.md  index.html  package.json  postcss.config.js  seam.toml  vite.config.ts
examples/github-dashboard/: README.md  package.json  seam.config.ts  seam.toml  tsconfig.json
examples/github-dashboard/backends/rust-axum/: Cargo.toml  README.md  seam.config.ts  seam.toml
examples/github-dashboard/backends/rust-axum/src/: main.rs  procedures.rs
examples/github-dashboard/frontend/: README.md  package.json  postcss.config.mjs  vite.config.ts
examples/github-dashboard/next-app/: README.md  next-env.d.ts  next.config.ts  package.json  postcss.config.mjs
examples/github-dashboard/seam-app/: .gitignore  README.md  package.json  postcss.config.mjs  seam.config.ts  seam.toml  (+2 more)
examples/i18n-demo/: README.md
examples/i18n-demo/backend/: Cargo.toml
examples/i18n-demo/backend/src/: main.rs
examples/markdown-demo/server-rust/: Cargo.toml
examples/server-bun/: package.json  seam.toml
examples/server-node/: package.json  seam.toml
examples/server-rust/: Cargo.toml  seam.toml
examples/shadcn-ui-demo/: README.md  package.json  postcss.config.mjs  seam.config.ts
examples/standalone/server-rust/: CLAUDE.md  Cargo.toml  README.md  seam.config.ts
examples/standalone/server-rust/src/: main.rs
examples/standalone/server-rust/src/pages/: mod.rs
examples/standalone/server-rust/src/procedures/: get_user.rs  greet.rs  list_users.rs  mod.rs
examples/standalone/server-rust/src/subscriptions/: mod.rs  on_count.rs
scripts/: build-cli.sh  build-fixtures.sh  build-wasm.sh  bump-version.sh  fix-dts.js  lint-go.sh  lint-length.sh  lint-suppressions.sh  publish.sh  push.sh  smoke-fullstack.sh  typecheck-ts.sh  verify-all.sh  yalc-publish.sh
scripts/ci/: _lib.sh  build-cli.sh  build-fixtures.sh  build-ts.sh  build-wasm.sh  fmt-check.sh  fmt.sh  lint.sh  test-e2e.sh  test-go.sh  test-integration.sh  test-rs.sh  test-ts.sh  typecheck.sh
src/cli/codegen/: CLAUDE.md  Cargo.toml  README.md
src/cli/codegen/src/: lib.rs  manifest.rs  rpc_hash.rs
src/cli/codegen/src/manifest/: mod.rs  tests.rs
src/cli/codegen/src/typescript/: generator.rs  mod.rs  render.rs
src/cli/codegen/src/typescript/generator/: channel.rs  mod.rs  transport.rs
src/cli/codegen/src/typescript/tests/: channel.rs  fixtures.rs  manifest.rs  mod.rs  render.rs
src/eslint/: CLAUDE.md  README.md  package.json  tsdown.config.ts
src/i18n/: README.md  package.json  tsdown.config.ts
tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
tests/fs-router/: fs_router_test.go  go.mod
tests/fullstack/: CLAUDE.md  fullstack_test.go  go.mod
tests/i18n/: go.mod  i18n_test.go
tests/integration/: CLAUDE.md  batch_test.go  channel_test.go  go.mod  helpers_test.go  main_test.go  manifest_test.go  page_test.go  parity_test.go  rpc_test.go  subscribe_test.go
tests/markdown-demo/: go.mod  main_test.go  page_test.go
tests/workspace-integration/: go.mod  helpers_test.go  main_test.go  manifest_test.go  parity_test.go  rpc_test.go
(+819 files in other folders)
