[workspace]
resolver = "2"
members = [
  "packages/server/core/rust",
  "packages/server/core/rust-macros",
  "packages/server/injector/rust",
  "packages/server/injector/wasm",
  "packages/cli/core",
  "examples/standalone/server-rust",
]

[workspace.lints.clippy]
too_many_lines = "warn"

[workspace.package]
version = "0.2.9"
edition = "2021"
license = "MIT"
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
repository = "https://github.com/canmi21/seam"
