[workspace]
resolver = "2"
members = [
  "packages/server/core/rust",
  "packages/server/core/rust-macros",
  "packages/server/adapter/axum",
  "packages/server/injector/rust",
  "packages/server/injector/wasm",
  "packages/server/engine/rust",
  "packages/server/engine/wasm",
  "packages/cli/core",
  "examples/standalone/server-rust",
  "examples/github-dashboard/backends/rust-axum",
  "examples/i18n-demo/backend",
]

[workspace.lints.clippy]
too_many_lines = "warn"

[workspace.package]
version = "0.4.10"
edition = "2021"
license = "MIT"
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
repository = "https://github.com/canmi21/seam"
