[package]
name = "markdown-demo-rust"
version = "0.0.0"
publish = false

[package.edition]
workspace = true

[package.license]
workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1"

[dependencies.pulldown-cmark]
version = "0.13"
default-features = false
features = ["html"]

[dependencies.seam-server]
path = "../../../src/server/core/rust"

[dependencies.seam-server-axum]
path = "../../../src/server/adapter/axum"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
