[package]
name = "demo-server-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-stream = "0.3"
seam-server = { path = "../../../packages/server/core/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
