[package]
name = "demo-server-rust"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-stream = "0.3"
seam-server = { path = "../../../src/server/core/rust" }
seam-server-axum = { path = "../../../src/server/adapter/axum" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
