[package]
name = "github-dashboard-axum"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
seam-server = { version = "0.3.2", path = "../../../../packages/server/core/rust" }
seam-server-axum = { version = "0.3.2", path = "../../../../packages/server/adapter/axum" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
